<resources>
	<string name="app_name">(this text will be overriden)</string>
    <string name="sg_app_name">SoftgamesSDK 2.0</string>
    <string name="sg_admob_key">a151790cbb482ed</string>
    <string name="sg_adjust_token">97ew4e2f5wfa</string>
    <string name="sg_zoneLoadingId">274</string>
    <string name="sg_zoneXpromoId">273</string>
    <string name="sg_zoneMoreGameButtonId">320</string>
    <string name="sg_offline_retry_msg">Please check your Internet connection!</string>
    <string name="sg_button_retry">Retry</string>
    <string name="sg_button_exit">Settings</string>
    <string name="sg_button_play">Play</string>
    <plurals name="sg_server_register_error">
        <item quantity="one">Failed to register after one attempt</item>
        <item quantity="other">Failed to register after %d attempts</item>
    </plurals>
    <string name="sg_more_games_title">More FREE Games!</string>

</resources>