<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ox="http://softgames.de/schemas/android/openx/0.1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sg_bg_xpromo"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/teaser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/teaserImage"
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/sg_xpromo_teaser" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/sg_bg_darktransparent"
            android:padding="8dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/teaser_text"
                style="@style/SGText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" 
                android:layout_weight="0.7"/>

            <Button
                android:id="@+id/button_play"
                style="@style/SGText.Button"
                android:layout_width="0dp" 
                android:layout_height="wrap_content"
                android:layout_weight="0.3" 
                android:text="@string/sg_button_play"
                />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sg_gradient_divider"
        android:orientation="vertical" >

        <View
            android:id="@+id/first_divider"
            style="@style/SGDivider"
            android:layout_width="match_parent" />

        <TextView
            android:id="@+id/divider_text"
            style="@style/SGText.Divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sg_divider_text" />

        <View
            android:id="@+id/second_divider"
            style="@style/SGDivider"
            android:layout_width="match_parent" />
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"    
	    android:orientation="vertical"
	    android:gravity="top">
	    <de.softgames.sdk.OpenxAdView
	        android:id="@+id/adview_xpromo"
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        ox:js_tag_url="afr.php"
	        ox:template="CLEAN"
	        ox:zone_id="@string/sg_zoneXpromoId" 
	        android:layout_gravity="top|center_horizontal"/>
	</LinearLayout>
</LinearLayout>